--- a/common/wavelets/vanish.tex
+++ b/common/wavelets/vanish.tex
@@ -1231,104 +1231,6 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %but yet are not orthogonal.
 %In particular, note that for all of them $\sum_{n\in\Z} (-1)^n\fh_n = 0$ (see \pref{thm:pun_zero}).
 
-%--------------------------------------
-\begin{example}[\exmd{2 coefficient case}/\exmd{Haar wavelet system}/\exmd{order 0 B-spline wavelet system}]
-\footnote{
-  \citor{haar1910},
-  \citerppgc{wojtaszczyk1997}{14}{15}{0521578949}{``Sources and comments"}
-  }
-\label{ex:pun_n=2}
-%--------------------------------------
-%\prefpp{ex:ortho_n=2} used the admissibility condition (\prefp{thm:admiss})
-%and orthonormal constrained quadrature condition (\prefp{thm:ortho_quadcon})
-%to design a 2 coefficient wavelet analysis.
-%In this example, we remove the orthnormality constraint and replace it with
-%the more general \hie{partition of unity} constraint
-%(all orthonormal wavelet analyses possess the partition of unity property---
-%\prefp{cor:pun_ortho}).
-%But even under this relaxed constraint, the same coefficients are still produced.
-%These coefficients are the \hie{Haar wavelet analysis}.
-%They can also be produced using other systems of equations including the following:
-%\begin{dingautolist}{"AC}
-%  \item Admissibility condition and \hie{orthonormality}---\prefpp{ex:ortho_n=2}
-%  \item \hie{Daubechies-$p1$} wavelets computed using spectral techniques---\prefpp{ex:dau-p1}
-%\end{dingautolist}
-\\Let $\wavsys$ be an \structe{wavelet system}.
-\exbox{
-  \brb{\begin{array}{FMMD}
-    1. & $\support\fphi(x)=\intcc{0}{1}$                             & \xref{thm:mra_support}  & and\\
-    2. & \prope{admissibility condition}                             & \xref{thm:admiss}       & and \\
-    3. & \prope{partition of unity}                                  & \xref{thm:pun_zero}     &
-   %4. & $\fg_n  = (-1)^n \fh_{\xN-n}^\ast$ $\scy\forall n\in\Z$      & \xref{thm:wavstrct_cqf} & %\xref{thm:cqf}
-  \end{array}}
-  \implies
-  \brb{\begin{array}{r|r}%
-    n  & \fh_{n}\\  %& g_n\\
-    \hline
-    0            & \ds \cwt\\   %& \ds \cwt   \\
-    1            & \ds \cwt\\   %& \ds -\cwt  \\
-    \text{other} & 0          %& 0
-  \end{array}}
-  %\brb{\begin{array}{r|r|r}%
-  %  n  & \fh_{n}  & g_n\\
-  %  \hline
-  %  0  & \ds \cwt   & \ds \cwt   \\
-  %  1  & \ds \cwt   & \ds -\cwt  \\
-  %  \text{other} & 0 & 0
-  %\end{array}}
-  %\tbox{\includegraphics{../common/math/graphics/pdfs/d1_phi_h.pdf}}
-  }%
-\\
-\begin{tabular}{cc}
-   \includegraphics{../common/math/graphics/pdfs/n0_h.pdf}
-  &\includegraphics{../common/math/graphics/pdfs/n0_pz.pdf}
-\end{tabular}
-%\\
-%  \begin{tabular}{cc}%
-%    \includegraphics{../common/math/graphics/pdfs/d1_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/d1_psi_g.pdf}%
-%  \end{tabular}
-\end{example}
-\begin{proof}
-\begin{enumerate}
-  \item Proof that (1) $\implies$ that only $h_0$ and $h_1$ are non-zero: by \prefp{thm:mra_support}.
-
-  \item Proof for values of $h_0$ and $h_1$:
-    \begin{enumerate}
-      \item Method 1:
-        Under the constraint of two non-zero scaling coefficients,
-        a scaling function design is fully constrained using the \hie{admissibility equation} \xref{thm:admiss}
-        and the \hie{partition of unity} constraint\ifsxref{partuni}{def:pun}.
-        The partition of unity formed by $\fphi(x)$ is illustrated in \prefpp{ex:n0_pounity}. %\prefp{ex:pounity_squarepulse}.
-
-        Here are the equations:
-        \\\indentx$\ds\begin{array}{rcl@{\qquad}MMM}
-         \fh_0 +\fh_1 &=& \sqrt{2}    & (admissibility equation          & \pref{thm:admiss}   & \prefpo{thm:admiss}) \\
-         \fh_0 -\fh_1 &=& 0           & (partition of unity/zero at $-1$ & \pref{thm:pun_zero} & \prefpo{thm:pun_zero})
-        \end{array}$
-        \\
-        Here are the calculations for the coefficients:
-        \begin{align*}
-          (h_0+h_1)+(h_0-h_1) &= 2h_0 &&= \sqrt{2}         &&\text{(add two equations together)}\\
-          (h_0+h_1)-(h_0-h_1) &= 2h_1 &&= \sqrt{2}         &&\text{(subtract second from first)} \\
-          \\
-          %g_0 &=\fh_1 \\
-          %g_1 &= -h_0
-        \end{align*}
-
-      \ifdochas{spline}{\item Method 2: By \prefp{thm:Bsplineh}.}
-    \end{enumerate}
-
-\ifdochas{compactp}{
-  \item Note: $h_0$ and $h_1$ can also be produced using other systems of equations including the following:
-    \begin{dingautolist}{"AC}
-      \item \prope{admissibility condition} and \prope{orthonormality} \xref{ex:ortho_n=2}
-      \item \fncte{Daubechies-$p1$} wavelets computed using spectral techniques\ifsxref{compactp}{ex:dau-p1}
-    \end{dingautolist}
-  }
-  %\item Proof for values of $g_0$ and $g_1$: by \prefp{thm:wavstrct_cqf}.
-%\end{enumerate}
-%\end{proof}
-
 
 %%--------------------------------------
 %\begin{example}[\exm{order 1 B-spline wavelet system}]
@@ -1354,14 +1256,14 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %\end{array}}
 %\end{example}
 %\begin{proof}
- \item These results follow from \prefp{thm:Bsplineh}.
-\\\indentx$\brp{\begin{array}{*{9}{c}}
-    &   &   &   & 1 &   &   &   &  \\
-    &   &   & 1 &   & 1 &   &   &  \\
-    &   & 1 &   & 2 &   & 1 &   &
-\end{array}}$
-\end{enumerate}
-\end{proof}
+% \item These results follow from \prefp{thm:Bsplineh}.
+%\\\indentx$\brp{\begin{array}{*{9}{c}}
+%    &   &   &   & 1 &   &   &   &  \\
+%    &   &   & 1 &   & 1 &   &   &  \\
+%    &   & 1 &   & 2 &   & 1 &   &
+%\end{array}}$
+%\end{enumerate}
+%\end{proof}
 %
 %--------------------------------------
 \begin{example}[\exm{order 3 B-spline wavelet system}]
