h=(sqrt(2)/3)[1,3/2,1/2] scaling function

--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -659,7 +659,7 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
 \section{Examples}
 %\label{sec:examples_pounity}
 %=======================================
-Under a very weak set of constraints, the B-spline $\fN_0(x)$ 
+Under a very weak set of constraints, the B-spline $\fN_0(x)$
 naturally results (next example).
 %--------------------------------------
 \begin{example}[\exmd{2 coefficient case}/\exmd{Haar wavelet system}/\exmd{order 0 B-spline wavelet system}]
@@ -750,9 +750,28 @@ naturally results (next example).
     \end{dingautolist}
   }
     \end{enumerate}
-  
+
 %\item Proof for values of $g_0$ and $g_1$: by \prefp{thm:wavstrct_cqf}.
 \end{proof}
 
+%--------------------------------------
+\begin{example}
+\label{ex:h_2_3_1}
+%--------------------------------------
+Let $\wavsys$ be a \structe{wavelet system}.
+\exbox{
+  \begin{array}{|r|r|}%
+    n  & \fh_{n}
+    \\\hline
+      0 & \frac{\sqrt{2}}{3}\cdot1
+    \\1 & \frac{\sqrt{2}}{3}\cdot\frac{3}{2}
+    \\2 & \frac{\sqrt{2}}{3}\cdot\frac{1}{2}
+    \\\text{other} & 0
+  \end{array}
+  \tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_pz.pdf}}
+  \tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_phi_h.pdf}}
+  \tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_psi_g.pdf}}
+  }%
+\end{example}
 
 
