partition of unity with H(z) zero at z=-2

--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -669,27 +669,12 @@ naturally results (next example).
   }
 \label{ex:pun_n=2}
 %--------------------------------------
-%\prefpp{ex:ortho_n=2} used the admissibility condition (\prefp{thm:admiss})
-%and orthonormal constrained quadrature condition (\prefp{thm:ortho_quadcon})
-%to design a 2 coefficient wavelet analysis.
-%In this example, we remove the orthnormality constraint and replace it with
-%the more general \hie{partition of unity} constraint
-%(all orthonormal wavelet analyses possess the partition of unity property---
-%\prefp{cor:pun_ortho}).
-%But even under this relaxed constraint, the same coefficients are still produced.
-%These coefficients are the \hie{Haar wavelet analysis}.
-%They can also be produced using other systems of equations including the following:
-%\begin{dingautolist}{"AC}
-%  \item Admissibility condition and \hie{orthonormality}---\prefpp{ex:ortho_n=2}
-%  \item \hie{Daubechies-$p1$} wavelets computed using spectral techniques---\prefpp{ex:dau-p1}
-%\end{dingautolist}
-\\Let $\wavsys$ be an \structe{wavelet system}.
+\\Let $\wavsys$ be a \structe{wavelet system}.
 \exbox{
   \brb{\begin{array}{FMMD}
-    1. & $\support\fphi(x)=\intcc{0}{1}$                             & \xref{thm:mra_support}  & and\\
-    2. & \prope{admissibility condition}                             & \xref{thm:admiss}       & and \\
-    3. & \prope{partition of unity}                                  & \xref{thm:pun_zero}     &
-   %4. & $\fg_n  = (-1)^n \fh_{\xN-n}^\ast$ $\scy\forall n\in\Z$      & \xref{thm:wavstrct_cqf} & %\xref{thm:cqf}
+      1. & $\support\fphi(x)=\intcc{0}{1}$ & \xref{thm:mra_support}  & and
+    \\2. & \prope{admissibility condition} & \xref{thm:admiss}       & and
+    \\3. & \prope{partition of unity}      & \xref{thm:pun_zero}     &
   \end{array}}
   \implies
   \brb{\begin{array}{r|r}%
@@ -699,22 +684,10 @@ naturally results (next example).
     1            & \ds \cwt\\   %& \ds -\cwt  \\
     \text{other} & 0          %& 0
   \end{array}}
-  %\brb{\begin{array}{r|r|r}%
-  %  n  & \fh_{n}  & g_n\\
-  %  \hline
-  %  0  & \ds \cwt   & \ds \cwt   \\
-  %  1  & \ds \cwt   & \ds -\cwt  \\
-  %  \text{other} & 0 & 0
-  %\end{array}}
-  %\tbox{\includegraphics{../common/math/graphics/pdfs/d1_phi_h.pdf}}
-  }%
-\\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n0_h.pdf}}
-  \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n0_pz.pdf}}
-
-%\\
-%  \begin{tabular}{cc}%
-%    \includegraphics{../common/math/graphics/pdfs/d1_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/d1_psi_g.pdf}%
-%  \end{tabular}
+  }
+\\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n0_pz.pdf}}
+  \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n0_h.pdf}}
+  \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/b0_g.pdf}}
 \end{example}
 \begin{proof}
 \begin{enumerate}
@@ -735,12 +708,7 @@ naturally results (next example).
         \begin{align*}
           (h_0+h_1)+(h_0-h_1) &= 2h_0 &&= \sqrt{2}         &&\text{(add two equations together)}\\
           (h_0+h_1)-(h_0-h_1) &= 2h_1 &&= \sqrt{2}         &&\text{(subtract second from first)} \\
-          \\
-          %g_0 &=\fh_1 \\
-          %g_1 &= -h_0
         \end{align*}
-
-  %    \ifdochas{spline}{\item Method 2: By \prefp{thm:Bsplineh}.}
 
 \ifdochas{compactp}{
   \item Note: $h_0$ and $h_1$ can also be produced using other systems of equations including the following:
@@ -760,18 +728,81 @@ naturally results (next example).
 %--------------------------------------
 Let $\wavsys$ be a \structe{wavelet system}.
 \exbox{
-  \begin{array}{|r|r|}%
+  \brb{\begin{array}{FMMD}
+      1. & $\support\fphi(x)=\intcc{0}{2}$ & \xref{thm:mra_support}  & and
+    \\2. & \prope{admissibility condition} & \xref{thm:admiss}       & and
+    \\3. & \prope{partition of unity}      & \xref{thm:pun_zero}     & and
+    \\4. & $\Zh(z)$ has a root at $z=-0.5$ &                         &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{|r|r|}%
     n  & \fh_{n}
     \\\hline
       0 & \frac{\sqrt{2}}{3}\cdot1
     \\1 & \frac{\sqrt{2}}{3}\cdot\frac{3}{2}
     \\2 & \frac{\sqrt{2}}{3}\cdot\frac{1}{2}
     \\\text{other} & 0
-  \end{array}
-  \tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_pz.pdf}}
-  \tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_phi_h.pdf}}
-  \tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_psi_g.pdf}}
-  }%
+  \end{array}}
+  }
+  \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_pz.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_phi_h.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_psi_g.pdf}}
 \end{example}
+\begin{proof}
+\begin{enumerate}
+  \item By (1) and \prefpp{thm:mra_support}, there are 3 non-zero coefficients.
+  \item By (3), $\Zh(z)$ has a zero at $z=-1$ and as such has a factor $(z+1)$.
+  \item By (4), $\Zh(z)$ has a zero at $z=-1/2$ and as such has a factor $(z+1/2)$.
+  \item By (2), $\sum h_n=\sqrt{2}$.
+  \item Putting it all together \ldots
+  \begin{align*}
+    \Zh(z) &= c\frac{\brp{z+1}\brp{z+\frac{1}{2}}}{z^2} 
+                      = c\frac{z^2 + \frac{3}{2}z + \frac{1}{2}}{z^2}
+                      = c\brs{1 + \frac{3}{2}z^{-1} + \frac{1}{2}z^{-2}}
+                      = \frac{\sqrt{2}}{3}\brs{1 + \frac{3}{2}z^{-1} + \frac{1}{2}z^{-2}}
+  \end{align*}
+\end{enumerate}
+\end{proof}
 
+%--------------------------------------
+\begin{example}
+\label{ex:h_1_3_2}
+%--------------------------------------
+Let $\wavsys$ be a \structe{wavelet system}.
+\exbox{
+  \brb{\begin{array}{FMMD}
+      1. & $\support\fphi(x)=\intcc{0}{2}$ & \xref{thm:mra_support}  & and
+    \\2. & \prope{admissibility condition} & \xref{thm:admiss}       & and
+    \\3. & \prope{partition of unity}      & \xref{thm:pun_zero}     & and
+    \\4. & $\Zh(z)$ has a root at $z=-2$   &                         &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{|r|r|}%
+    n  & \fh_{n}
+    \\\hline
+      0 & \frac{\sqrt{2}}{6}\cdot1
+    \\1 & \frac{\sqrt{2}}{6}\cdot3
+    \\2 & \frac{\sqrt{2}}{6}\cdot2
+    \\\text{other} & 0
+  \end{array}}
+  }
+  \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_3_2_pz.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_3_2_phi_h.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_3_2_psi_g.pdf}}
+\end{example}
+\begin{proof}
+\begin{enumerate}
+  \item By (1) and \prefpp{thm:mra_support}, there are 3 non-zero coefficients.
+  \item By (3), $\Zh(z)$ has a zero at $z=-1$ and as such has a factor $(z+1)$.
+  \item By (4), $\Zh(z)$ has a zero at $z=-1/2$ and as such has a factor $(z+2)$.
+  \item By (2), $\sum h_n=\sqrt{2}$.
+  \item Putting it all together \ldots
+  \begin{align*}
+    \Zh(z) &= c\frac{\brp{z+1}\brp{z+2}}{z^2} 
+                      = c\frac{z^2 + 3z + 2}{z^2}
+                      = c\brs{1 + 3z^{-1} + 2z^{-2}}
+                      = \frac{\sqrt{2}}{6}\brs{1 + 3z^{-1} + 2z^{-2}}
+  \end{align*}
+\end{enumerate}
+\end{proof}
 
