minimum phase work

--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -251,24 +251,29 @@ be polynomials.
 But for more \prope{symmetry}, put some zeros inside and some outside the unit circle \xref{fig:pz_d4}.
 
 \begin{figure}[h]
-\begin{center}
-\footnotesize
-\setlength{\unitlength}{0.08mm}
-\begin{tabular}{|c|c|}
-  \hline
-  Daubechies-4 & Symlets-4
-  \\\hline
-  \includegraphics{../common/math/graphics/pdfs/D4_pz.pdf}&\includegraphics{../common/math/graphics/pdfs/S4_pz.pdf} \\
-  \includegraphics{../common/math/graphics/pdfs/d4_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/s4_phi_h.pdf}\\
-  \hline
-  \prope{minimum phase} & \emph{not} minimum phase
-  \\\hline
-\end{tabular}
-\caption{
-   Daubechies-4 and Symlet-4 scaling functions pole-zero plots
-   \label{fig:pz_d4}
-   }
-\end{center}
+  \centering%
+  \begin{tabular}{|c|c|}
+      \hline
+      1 vanishing moment and 1 zero at $z=-0.5$
+     &1 vanishing moment and 1 zero at $z=-2$
+    \\\hline
+      \includegraphics{../common/math/graphics/pdfs/h_2_3_1_pz.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/h_1_3_2_pz.pdf}
+    \\\includegraphics{../common/math/graphics/pdfs/h_2_3_1_phi_h.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/h_1_3_2_phi_h.pdf}
+    \\\hline\hline
+      Daubechies-4 & Symlets-4
+    \\\hline
+      \includegraphics{../common/math/graphics/pdfs/D4_pz.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/S4_pz.pdf}
+    \\\includegraphics{../common/math/graphics/pdfs/d4_phi_h.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/s4_phi_h.pdf}
+    \\\hline\hline
+      \prope{minimum phase} & \emph{not} minimum phase
+    \\\hline
+  \end{tabular}
+  \caption{Minimum/non-minimum phase comparison
+           \label{fig:pz_d4}}
 \end{figure}
 %--------------------------------------
 \begin{example}
