--- a/common/math/graphics/wavelets/h_2_3_1_phi_h.tex
+++ b/common/math/graphics/wavelets/h_2_3_1_phi_h.tex
@@ -28,7 +28,7 @@
   %-------------------------------------
   % data labels
   %-------------------------------------
-  \uput{3pt}[165](h0){$\scy\sfrac{\sqrt{2}}{3}\cdot1$}%
-  \uput{3pt}[ 45](h1){$\scy\sfrac{\sqrt{2}}{3}\cdot\frac{3}{2}$}%
-  \uput{2pt}[ 90](h2){$\scy\sfrac{\sqrt{2}}{3}\cdot\frac{1}{2}$}%
+  \uput{3pt}[165](h0){$\scy\frac{\sqrt{2}}{6}\cdot2$}%
+  \uput{3pt}[ 45](h1){$\scy\frac{\sqrt{2}}{6}\cdot3$}%
+  \uput{2pt}[ 90](h2){$\scy\frac{\sqrt{2}}{6}\cdot1$}%
 \end{pspicture}%
