--- a/common/math/graphics/wavelets/h_2_3_1_psi_g.tex
+++ b/common/math/graphics/wavelets/h_2_3_1_psi_g.tex
@@ -28,7 +28,7 @@
   %-------------------------------------
   % data labels
   %-------------------------------------
-  \uput{3pt}[165](g0){$\scy\sfrac{\sqrt{2}}{3}\cdot1$}%
-  \uput{3pt}[-45](g1){$\scy-\sfrac{\sqrt{2}}{3}\cdot\frac{3}{2}$}%
-  \uput{2pt}[ 90](g2){$\scy\sfrac{\sqrt{2}}{3}\cdot\frac{1}{2}$}%
+  \uput{3pt}[165](g0){$\scy \frac{\sqrt{2}}{6}\cdot2$}%
+  \uput{3pt}[-45](g1){$\scy-\frac{\sqrt{2}}{6}\cdot3$}%
+  \uput{2pt}[ 90](g2){$\scy \frac{\sqrt{2}}{6}\cdot1$}%
 \end{pspicture}%
