--- a/common/wavelets/compactp.tex
+++ b/common/wavelets/compactp.tex
@@ -653,7 +653,7 @@ For each value $p$, there are exactly
 $2^\floor{p/2}$ solutions that are of minimum order
 $2p-1$.
 Of these $2^\floor{p/2}$ solutions, there is one solution that
-is also {\em minimum phase}.
+is also \prope{minimum phase}\ifsxref{dsp}{def:minphase}.
 This is the Daubechies-$p$ scaling function.
 All the $2^\floor{p/2}$ solutions occur when
 $\fR(y)=0$.
