--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -724,48 +724,6 @@ naturally results (next example).
 
 %--------------------------------------
 \begin{example}
-\label{ex:h_2_3_1}
-%--------------------------------------
-Let $\wavsys$ be a \structe{wavelet system}.
-\exbox{
-  \brb{\begin{array}{FMMD}
-      1. & $\support\fphi(x)=\intcc{0}{2}$ & \xref{thm:mra_support}  & and
-    \\2. & \prope{admissibility condition} & \xref{thm:admiss}       & and
-    \\3. & \prope{partition of unity}      & \xref{thm:pun_zero}     & and
-    \\4. & $\Zh(z)$ has a root at $z=-0.5$ &                         &
-  \end{array}}
-  \implies
-  \brb{\begin{array}{|r|r|}%
-    n  & \fh_{n}
-    \\\hline
-      0 & \frac{\sqrt{2}}{3}\cdot1
-    \\1 & \frac{\sqrt{2}}{3}\cdot\frac{3}{2}
-    \\2 & \frac{\sqrt{2}}{3}\cdot\frac{1}{2}
-    \\\text{other} & 0
-  \end{array}}
-  }
-  \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_pz.pdf}}
-    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_phi_h.pdf}}
-    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_psi_g.pdf}}
-\end{example}
-\begin{proof}
-\begin{enumerate}
-  \item By (1) and \prefpp{thm:mra_support}, there are 3 non-zero coefficients.
-  \item By (3), $\Zh(z)$ has a zero at $z=-1$ and as such has a factor $(z+1)$.
-  \item By (4), $\Zh(z)$ has a zero at $z=-1/2$ and as such has a factor $(z+1/2)$.
-  \item By (2), $\sum h_n=\sqrt{2}$.
-  \item Putting it all together \ldots
-  \begin{align*}
-    \Zh(z) &= c\frac{\brp{z+1}\brp{z+\frac{1}{2}}}{z^2} 
-                      = c\frac{z^2 + \frac{3}{2}z + \frac{1}{2}}{z^2}
-                      = c\brs{1 + \frac{3}{2}z^{-1} + \frac{1}{2}z^{-2}}
-                      = \frac{\sqrt{2}}{3}\brs{1 + \frac{3}{2}z^{-1} + \frac{1}{2}z^{-2}}
-  \end{align*}
-\end{enumerate}
-\end{proof}
-
-%--------------------------------------
-\begin{example}
 \label{ex:h_1_3_2}
 %--------------------------------------
 Let $\wavsys$ be a \structe{wavelet system}.
@@ -798,10 +756,56 @@ Let $\wavsys$ be a \structe{wavelet system}.
   \item By (2), $\sum h_n=\sqrt{2}$.
   \item Putting it all together \ldots
   \begin{align*}
-    \Zh(z) &= c\frac{\brp{z+1}\brp{z+2}}{z^2} 
+    \Zh(z) &= c\frac{\brp{z+1}\brp{z+2}}{z^2}
                       = c\frac{z^2 + 3z + 2}{z^2}
                       = c\brs{1 + 3z^{-1} + 2z^{-2}}
                       = \frac{\sqrt{2}}{6}\brs{1 + 3z^{-1} + 2z^{-2}}
+  \end{align*}
+\end{enumerate}
+\end{proof}
+
+%--------------------------------------
+\begin{example}
+\label{ex:h_2_3_1}
+%--------------------------------------
+Let $\wavsys$ be a \structe{wavelet system}.
+\exbox{
+  \brb{\begin{array}{FMMD}
+      1. & $\support\fphi(x)=\intcc{0}{2}$ & \xref{thm:mra_support}  & and
+    \\2. & \prope{admissibility condition} & \xref{thm:admiss}       & and
+    \\3. & \prope{partition of unity}      & \xref{thm:pun_zero}     & and
+    \\4. & $\Zh(z)$ has a root at $z=-0.5$ &                         &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{|r|r|}%
+    n  & \fh_{n}
+    \\\hline
+      0 & \frac{\sqrt{2}}{6}\cdot2
+    \\1 & \frac{\sqrt{2}}{6}\cdot3
+    \\2 & \frac{\sqrt{2}}{6}\cdot1
+    \\\text{other} & 0
+  \end{array}}
+  }
+  \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_pz.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_phi_h.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_2_3_1_psi_g.pdf}}
+\\Note that in contrast to \pref{ex:h_1_3_2}, the zero of condition (4) is \emph{inside}
+the unit circle, making $\Zh(z)$ \prope{minimum phase} \xref{def:minphase} and,
+in agreement with \thme{Robinson's Energy Delay Theorem}\ifsxref{dsp}{thm:redt},
+pushing the energy of the resulting $\fphi(x)$ more towards the origin.
+\end{example}
+\begin{proof}
+\begin{enumerate}
+  \item By (1) and \prefpp{thm:mra_support}, there are 3 non-zero coefficients.
+  \item By (3), $\Zh(z)$ has a zero at $z=-1$ and as such has a factor $(z+1)$.
+  \item By (4), $\Zh(z)$ has a zero at $z=-1/2$ and as such has a factor $(z+1/2)$.
+  \item By (2), $\sum h_n=\sqrt{2}$.
+  \item Putting it all together \ldots
+  \begin{align*}
+    \Zh(z) &= c\frac{\brp{z+1}\brp{z+\frac{1}{2}}}{z^2}
+                      = c\frac{z^2 + \frac{3}{2}z + \frac{1}{2}}{z^2}
+                      = c\brs{1 + \frac{3}{2}z^{-1} + \frac{1}{2}z^{-2}}
+                      = \frac{\sqrt{2}}{3}\brs{1 + \frac{3}{2}z^{-1} + \frac{1}{2}z^{-2}}
   \end{align*}
 \end{enumerate}
 \end{proof}
