--- a/common/math/graphics/wavelets/h_1_3_2_psi_g.tex
+++ b/common/math/graphics/wavelets/h_1_3_2_psi_g.tex
@@ -28,7 +28,7 @@
   %-------------------------------------
   % data labels
   %-------------------------------------
-  \uput{3pt}[155](g0){$\scy\sfrac{\sqrt{2}}{6}\cdot1$}%
-  \uput{3pt}[180](g1){$\scy\sfrac{-\sqrt{2}}{6}\cdot3$}%
-  \uput{2pt}[ 90](g2){$\scy\sfrac{\sqrt{2}}{6}\cdot2$}%
+  \uput{3pt}[155](g0){$\scy\frac{ \sqrt{2}}{6}\cdot1$}%
+  \uput{3pt}[180](g1){$\scy\frac{-\sqrt{2}}{6}\cdot3$}%
+  \uput{2pt}[ 90](g2){$\scy\frac{ \sqrt{2}}{6}\cdot2$}%
 \end{pspicture}%
