--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -810,3 +810,29 @@ pushing the energy of the resulting $\fphi(x)$ more towards the origin.
 \end{enumerate}
 \end{proof}
 
+%--------------------------------------
+\begin{example}
+\label{ex:h_1_1_1o128}
+%--------------------------------------
+Let $\wavsys$ be a \structe{wavelet system}.
+\exbox{
+  \brb{\begin{array}{FMMD}
+      1. & $\support\fphi(x)=\intcc{0}{2}$ & \xref{thm:mra_support}  & and
+    \\2. & \prope{admissibility condition} & \xref{thm:admiss}       & and
+    \\3. & \prope{partition of unity}      & \xref{thm:pun_zero}     & and
+    \\4. & $\Zh(z)$ has a root at $z=1/128$ &                         &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{|r|r|}%
+    n  & \fh_{n}
+    \\\hline
+    %  0 & \frac{\sqrt{2}}{6}\cdot2
+    %\\1 & \frac{\sqrt{2}}{6}\cdot3
+    %\\2 & \frac{\sqrt{2}}{6}\cdot1
+    \\\text{other} & 0
+  \end{array}}
+  }
+  \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_pz.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_phi_h.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_psi_g.pdf}}
+\end{example}
