system with zero at z=-1/128

--- a/common/math/graphics/wavelets/h_1_1_1o128_phi_h.tex
+++ b/common/math/graphics/wavelets/h_1_1_1o128_phi_h.tex
@@ -6,9 +6,9 @@
   %-------------------------------------
   % nodes
   %-------------------------------------
-  \pnode(0, 0.7016253332703728){h0}%
-  \pnode(1, 0.7071067811865476){h1}%
-  \pnode(2, 0.005481447916174787){h2}%
+  \pnode(0, 0.7016253332703728){h0}%   [sqrt(2)/258]*128
+  \pnode(1, 0.7071067811865476){h1}%   [sqrt(2)/258]*129
+  \pnode(2, 0.005481447916174787){h2}% [sqrt(2)/258]*1
   %-------------------------------------
   % plot
   %-------------------------------------
@@ -28,7 +28,7 @@
   %-------------------------------------
   % data labels
   %-------------------------------------
-  %\uput{3pt}[165](h0){$\scy\frac{\sqrt{2}}{6}\cdot2$}%
-  %\uput{3pt}[ 45](h1){$\scy\frac{\sqrt{2}}{6}\cdot3$}%
-  %\uput{2pt}[ 90](h2){$\scy\frac{\sqrt{2}}{6}\cdot1$}%
+  \uput{3pt}[200](h0){$\scy\frac{\sqrt{2}}{258}\cdot128$}%
+  \uput{3pt}[ 45](h1){$\scy\frac{\sqrt{2}}{258}\cdot129$}%
+  \uput{3pt}[120](h2){$\scy\frac{\sqrt{2}}{258}\cdot1$}%
 \end{pspicture}%
