--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -756,10 +756,10 @@ Let $\wavsys$ be a \structe{wavelet system}.
   \item By (2), $\sum h_n=\sqrt{2}$.
   \item Putting it all together \ldots
   \begin{align*}
-    \Zh(z) &= c\frac{\brp{z+1}\brp{z+2}}{z^2}
-                      = c\frac{z^2 + 3z + 2}{z^2}
-                      = c\brs{1 + 3z^{-1} + 2z^{-2}}
-                      = \frac{\sqrt{2}}{6}\brs{1 + 3z^{-1} + 2z^{-2}}
+    \Zh(z)
+       &= \sqrt{2}\brs{\frac{\brp{z+1}\brp{z+2}}{(1+1)(1+2)z^2}}
+     \\&= \frac{\sqrt{2}}{6}\brs{\frac{z^2 + 3z + 2}{z^2}}
+     \\&= \frac{\sqrt{2}}{6}\brs{1 + 3z^{-1} + 2z^{-2}}
   \end{align*}
 \end{enumerate}
 \end{proof}
@@ -817,22 +817,35 @@ pushing the energy of the resulting $\fphi(x)$ more towards the origin.
 Let $\wavsys$ be a \structe{wavelet system}.
 \exbox{
   \brb{\begin{array}{FMMD}
-      1. & $\support\fphi(x)=\intcc{0}{2}$ & \xref{thm:mra_support}  & and
-    \\2. & \prope{admissibility condition} & \xref{thm:admiss}       & and
-    \\3. & \prope{partition of unity}      & \xref{thm:pun_zero}     & and
-    \\4. & $\Zh(z)$ has a root at $z=1/128$ &                         &
+      1. & $\support\fphi(x)=\intcc{0}{2}$   & \xref{thm:mra_support}  & and
+    \\2. & \prope{admissibility condition}   & \xref{thm:admiss}       & and
+    \\3. & \prope{partition of unity}        & \xref{thm:pun_zero}     & and
+    \\4. & $\Zh(z)$ has a root at $z=-1/128$ &                         &
   \end{array}}
   \implies
   \brb{\begin{array}{|r|r|}%
     n  & \fh_{n}
     \\\hline
-    %  0 & \frac{\sqrt{2}}{6}\cdot2
-    %\\1 & \frac{\sqrt{2}}{6}\cdot3
-    %\\2 & \frac{\sqrt{2}}{6}\cdot1
+      0 & \frac{\sqrt{2}}{258} \cdot 128
+    \\1 & \frac{\sqrt{2}}{258} \cdot 129
+    \\2 & \frac{\sqrt{2}}{258} \cdot 1
     \\\text{other} & 0
   \end{array}}
   }
   \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_pz.pdf}}
     \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_phi_h.pdf}}
     \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_psi_g.pdf}}
+\\
+Note that the root $z=-1/128$, being so close to the origin, has very little effect on the resulting
+scaling function, which in turn looks very much like the \fncte{Haar scaling function} in \pref{ex:pun_n=2}.
 \end{example}
+\begin{proof}
+\begin{align*}
+  \Zh(z)
+    &= \sqrt{2}\brs{\frac{\brp{z+1}\brp{z+\frac{1}{128}}}{\brp{1+1}\brp{1+\frac{1}{128}}z^2}}
+  \\&= \frac{\sqrt{2}}{\frac{129}{64}} \frac{\brs{ z^2 + \frac{129}{128}z + \frac{1}{128}}}{z^2}
+  \\&= \frac{\sqrt{2}}{129} \frac{\brs{ 64z^2 + \frac{129}{2}z + \frac{1}{2}}}{z^2}
+  \\&= \frac{\sqrt{2}}{258} \frac{\brs{ 128z^2 + 129z + 1}}{z^2}
+  \\&= \frac{\sqrt{2}}{258} \brs{128 + 129z^{-1} + z^{-2}}
+\end{align*}
+\end{proof}
