--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -270,6 +270,13 @@ But for more \prope{symmetry}, put some zeros inside and some outside the unit c
      &\includegraphics{../common/math/graphics/pdfs/s4_phi_h.pdf}
     \\\hline\hline
       \prope{minimum phase} & \emph{not} minimum phase
+    %\\\hline\hline
+    %  zero at z=-1/128 & zero at z=-128
+    %\\\hline
+    %  \indentx\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_pz.pdf}
+    % &\includegraphics{../common/math/graphics/pdfs/h_1_129_128_pz.pdf}
+    %\\\indentx\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_phi_h.pdf}
+    % &\includegraphics{../common/math/graphics/pdfs/h_1_129_128_phi_h.pdf}
     \\\hline
   \end{tabular}
   \caption{Minimum/non-minimum phase comparison
@@ -286,6 +293,20 @@ but the selected zeros are not all within the unit circle in the complex $z$ pla
 This results in a scaling function that is more symmetric and less contrated near the origin.
 Both scaling functions are illustrated in \prefpp{fig:pz_d4}.
 \end{example}
+
+\begin{figure}[h]
+  \centering%
+  \begin{tabular}{|c|c|}
+      \hline
+      \indentx\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_pz.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/h_1_129_128_pz.pdf}
+    \\\indentx\includegraphics{../common/math/graphics/pdfs/h_1_1_1o128_phi_h.pdf}
+     &\includegraphics{../common/math/graphics/pdfs/h_1_129_128_phi_h.pdf}
+    \\\hline
+  \end{tabular}
+  \caption{Another minimum/non-minimum phase comparison
+           \label{fig:pz_d4}}
+\end{figure}
 
 %=======================================
 \section{Pole locations}
