--- a/common/math/graphics/wavelets/h_1_129_128_pz.tex
+++ b/common/math/graphics/wavelets/h_1_129_128_pz.tex
@@ -1,9 +1,11 @@
 %============================================================================
 % LaTeX File
 % Daniel J. Greenhoe
+% Daubechies-2 Pole Zero plot
+% nominal font size = \gsize
 % nominal unit = 10mm
 %============================================================================
-\begin{pspicture}(-1.5,-2)(5.2,2)%
+\begin{pspicture}(-5.5,-1.75)(3.5,1.75)%
   %-------------------------------------
   % settings
   %-------------------------------------
@@ -12,8 +14,6 @@
   % nodes
   %-------------------------------------
   \pnode(0,0){origin}%          z-plane origin
-  \pnode(-1,0){pzeroes}%        p zeroes location
-  \pnode(0,0){poles}%           2p-1 poles location
   %-------------------------------------
   % asymptotic regions
   %   |z-1| = sqrt(2) (arc with radius sqrt(2) centered at z=1)
@@ -22,36 +22,46 @@
   %-------------------------------------
   \pscustom[fillstyle=solid,fillcolor=pzasymshade,linestyle=solid,linecolor=pzasym]{%
     \psarc(-1,0){1.414214}{-45}{45}%
-    \psarcn( 1,0){1.414214}{135}{-135}% 
+    \psarcn( 1,0){1.414214}{135}{-135}%
     }%
   %-------------------------------------
   % axes
   %-------------------------------------
-  \psaxes[linecolor=axis,labels=none]{<->}(0,0)(-1.5,-1.5)(4.5,1.5)%
-  \uput{1pt}[0](4.5,0){\color{axis}$\scy\Reb{z}$}%
-  \uput{2pt}[210](0,1.5){\color{axis}$\scy\Imb{z}$}%
+  \psaxes[linecolor=axis,labels=none]{<->}(0,0)(-2.5,-1.5)(2.75,1.5)%
+  \uput{1pt}[0](2.75,0){\color{axis}$\scy\Reb{z}$}%
+  \uput{2pt}[155](0,1.5){\color{axis}$\scy\Imb{z}$}%
   %-------------------------------------
   % unit circle
   %-------------------------------------
   \pscircle[linecolor=unitcircle](origin){1}%
-  \rput[tr](-1.5mm,-1.5mm){\rnode[b]{circleL}{$\scy\abs{z}=1$}}%
+  \rput[bl](-1.5,-1.5){\rnode[t]{circleL}{$\scy\abs{z}=1$}}%
   \pnode(-0.707,-0.707){circleP}% circle point
   \ncline[linecolor=unitcircle,linestyle=dotted,nodesepA=0pt]{->}{circleL}{circleP}% circle pointer
   %-------------------------------------
-  % B-spline zeroes (at z=-1)
+  % zero at z = z1 = -1
   %-------------------------------------
-  \Cnode[linewidth=1pt](-1,0){zp}%
-  \rput[bl](-1.45,-1.9){\rnode[t]{zpL}{$p$}$=4$ zeroes}%
-  \ncline[linestyle=dotted,linecolor=zero,nodesepA=1pt]{->}{zpL}{zp}%
-  \uput{1mm}[30](-1,0){\color{zero}$\scy4$}%
+  \pnode(-1,0){z1}%
+  \Cnode[linewidth=1pt](z1){z1node}%
+  \rput[l](-2.5,-0.5){\rnode[t]{z1label}{$\scy{z=-1}$}}%
+  \ncline[linestyle=dotted,linecolor=zero,nodesepA=1pt]{->}{z1label}{z1node}%
+  %-------------------------------------
+  % zero at z = z2 = -128
+  %-------------------------------------
+  \pnode(-5,0){z2}%
+  \Cnode[linewidth=1pt](z2){z2node}%
+  \rput(-3.75,0){$\cdots$}%
+  \rput[bl](-5.5,-1.1){\rnode[r]{z2label}{$\scy{z=-128}$}}%
+  \ncline[linestyle=dotted,linecolor=zero,nodesepA=1pt]{->}{z2label}{z2node}%
+ %\ncline[linestyle=dashed]{origin}{z2}%
   %-------------------------------------
   % poles
   %-------------------------------------
+  \pnode(0,0){poles}%
   \rput(poles){%
     \psline[linecolor=pole,linewidth=1pt](-0.1,+0.1)(+0.1,-0.1)%
     \psline[linecolor=pole,linewidth=1pt](-0.1,-0.1)(+0.1,+0.1)%
     }%
-  \rput[tl](-1.45,1.9){\rnode[br]{polesL}{$p$}$=4$ poles}%
+  \rput[b](-1,1){\rnode[b]{polesL}{\scs$2$ poles at $z=0$}}%
   \ncline[linestyle=dotted,linecolor=pole,nodesepA=0pt,nodesepB=5pt]{->}{polesL}{poles}%
-  \uput{1mm}[30](0,0){\color{pole}$\scy4$}%
+  \uput{1mm}[30](poles){\color{pole}$\scy2$}%
 \end{pspicture}%
