--- a/common/math/graphics/bsplines/n3_h.tex
+++ b/common/math/graphics/bsplines/n3_h.tex
@@ -33,10 +33,10 @@
     \rput[t](4,0){$4$}%
     }%
   %-------------------------------------------------------------------------
-  % for n=3                                   
-  %        1  n+1        (n+1)                   1   4          ( 4 )        
+  % for n=3
+  %        1  n+1        (n+1)                   1   4          ( 4 )
   % N_n(x)--- SUM (-1)^k (   ) (x-k)^n s(x-k) = --- SUM  (-1)^k (   ) (x-k)^3 s(x-k)
-  %        n! k=1        ( k )                   3! k=1         ( k )       
+  %        n! k=1        ( k )                   3! k=1         ( k )
   %
   % where s(x) = 0 for x<0 and 1 for x>=0  (step function)
   %-------------------------------------------------------------------------
@@ -46,7 +46,7 @@
   \psplot[plotpoints=64]{3}{4}  {1 x 0 sub 3 exp mul   4 x 1 sub 3 exp mul sub   6 x 2 sub 3 exp mul add   4 x 3 sub 3 exp mul sub   6 div}%
   \psplot[plotpoints=64]{4}{4.5}{1 x 0 sub 3 exp mul   4 x 1 sub 3 exp mul sub   6 x 2 sub 3 exp mul add   4 x 3 sub 3 exp mul sub   1 x 4 sub 3 exp mul add 6 div}%
   %                   N_3(x) = [(4choose0)(x-0)^3    - (4choose1)(x-1)^3       + (4choose2)(x-2)^3       - (4choose3)(x-3)^3       + (4choose4)(x-4)^3      ]/3!
-  %                          = [        1 (x-0)^3    -         4 (x-1)^3       +         6 (x-2)^3       -         4 (x-3)^3       +         1 (x-4)^3      ]/6 
+  %                          = [        1 (x-0)^3    -         4 (x-1)^3       +         6 (x-2)^3       -         4 (x-3)^3       +         1 (x-4)^3      ]/6
   \psline(0,0)(-0.5,0)
   \psline[linestyle=dotted](-0.5,0)(-0.75,0)%
   \psline[linestyle=dotted](4.5,0)(4.75,0)%
@@ -61,14 +61,14 @@
   \pnode(2, 0.53033008588991064330063327157864){h2}%
   \pnode(3, 0.35355339059327376220042218105242){h3}%
   \pnode(4, 0.08838834764831844055010554526311){h4}%
-  \psline[linecolor=red]{-o}(0,0)(h0)%  
-  \psline[linecolor=red]{-o}(1,0)(h1)%  
-  \psline[linecolor=red]{-o}(2,0)(h2)%  
-  \psline[linecolor=red]{-o}(3,0)(h3)%  
-  \psline[linecolor=red]{-o}(4,0)(h4)%  
-  \uput{0pt}[90](h0){$\scy\frac{\sqrt{2}}{16}=0.0883\cdots$}%
-  \uput{3pt}[90](h1){$\scy\frac{4\sqrt{2}}{16}$}%
-  \uput{5pt}[60](h2){$\scy\frac{6\sqrt{2}}{16}=0.530\cdots$}%
-  \uput{1pt}[45](h3){$\scy\frac{4\sqrt{2}}{16}=0.353\cdots$}%
-  \uput{1pt}[30](h4){$\scy\frac{\sqrt{2}}{16}$}%
+  \psline[linecolor=red]{-o}(0,0)(h0)%
+  \psline[linecolor=red]{-o}(1,0)(h1)%
+  \psline[linecolor=red]{-o}(2,0)(h2)%
+  \psline[linecolor=red]{-o}(3,0)(h3)%
+  \psline[linecolor=red]{-o}(4,0)(h4)%
+  \uput{0pt}[90](h0){$\scy\frac{\sqrt{2}}{16}\cdot1$}%
+  \uput{3pt}[90](h1){$\scy\frac{\sqrt{2}}{16}\cdot4$}%
+  \uput{5pt}[60](h2){$\scy\frac{\sqrt{2}}{16}\cdot6$}%
+  \uput{1pt}[45](h3){$\scy\frac{\sqrt{2}}{16}\cdot4$}%
+  \uput{1pt}[30](h4){$\scy\frac{\sqrt{2}}{16}\cdot1$}%
 \end{pspicture}%
