--- a/common/polynom.tex
+++ b/common/polynom.tex
@@ -329,9 +329,9 @@ Some examples of primitive polynomials over $GF(2)$ are
 \exbox{\begin{array}{cl|cl}
    \text{order} & \text{primitive polynomial} & \text{order} & \text{primitive polynomial}
    \\\hline
-      2 & \fp(x) = x^2    + x      + 1  &  5 & \fp(x) = x^5    + x^4    + x^2 + x + 1     
+      2 & \fp(x) = x^2    + x      + 1  &  5 & \fp(x) = x^5    + x^4    + x^2 + x + 1
    \\ 3 & \fp(x) = x^3    + x      + 1  & 16 & \fp(x) = x^{16} + x^{15} + x^{13} + x^4 + 1
-   \\ 4 & \fp(x) = x^4    + x      + 1  & 31 & \fp(x) = x^{31} + x^{28} + 1               
+   \\ 4 & \fp(x) = x^4    + x      + 1  & 31 & \fp(x) = x^{31} + x^{28} + 1
    \\ 5 & \fp(x) = x^5    + x^2    + 1  &
 \end{array}}
 \end{example}
@@ -648,12 +648,6 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
 \end{array}\]
 \end{proof}
 
-
-
-
-
-
-
 %--------------------------------------
 \begin{example}
 \label{ex:eea_n=3}
@@ -722,8 +716,6 @@ Because $\gcd(\fu,\fv)=1$, $\fu(x)$ and $\fv(x)$ are said to be
   \hline
 \end{array}\]
 \end{proof}
-
-
 
 %--------------------------------------
 \begin{example}
@@ -870,10 +862,6 @@ and $\fp_2(x)$ be a polynomial of degree $n_2$.
 No proof at this time.
 \end{proof}
 
-
-
-
-
 %=======================================
 \section{Roots}
 %=======================================
@@ -902,7 +890,6 @@ No proof at this time.
     English: & \citerp{descartes1637e}{175} \\
     image: & \scs\url{http://en.wikipedia.org/wiki/File:Frans_Hals_-_Portret_van_Ren\%C3\%A9_Descartes.jpg}, public domain
     }
-
 
 %--------------------------------------
 \begin{theorem}[\thmd{Fundamental Theorem of Algebra}]
@@ -1098,9 +1085,6 @@ then so is $\frac{1}{\sigma^\ast}$ because
 \[ \fp\left(\frac{1}{\sigma^\ast}\right) = \fp^\ast(\sigma) = 0^\ast = 0.\]
 \end{proof}
 
-
-
-
 \begin{figure}[ht]\color{figcolor}
 \begin{center}
 \begin{fsL}
@@ -1278,8 +1262,6 @@ consecutive real zeros of $\fp(x)$ is {\bf odd}.
 %
 %\end{theorem}
 
-
-
 %--------------------------------------
 \begin{definition}
 \footnote{
@@ -1326,7 +1308,6 @@ Let $\fieldF$ be a \structe{field}.
   are the roots of $A(x)$.
   }
 \end{definition}
-
 
 %=======================================
 \section{Polynomial expansions}
@@ -1404,9 +1385,9 @@ and $\hxs{\opDif}$ in $\clF{\spC}{\spC}$ the \ope{differentiation operator}.
 \index{theorems!Binomial Theorem}
 %---------------------------------------
 \thmbox{
-  (x+y)^n = \sum_{k=0}^n {n\choose k} x^{n-k} y^k
+  (x+y)^n = \sum_{k=0}^n \bcoef{n}{k} x^{n-k} y^k
   \hspace{3ex}\mbox{where}\hspace{3ex}
-  {n\choose k} \eqd \frac{n!}{(n-k)! k!}
+  \bcoef{n}{k} \eqd \frac{n!}{(n-k)! k!}
   }
 \end{theorem}
 \begin{proof}
@@ -1422,58 +1403,58 @@ but does not require any external theorem.
 \begin{align*}
   (x+y)^n
     &= \sum_{k=0}^\infty \frac{1}{k!} \deriv{^k}{y^k}\Big[(x+y)^n\Big]_{y=0} y^k
-    \qquad\text{by Maclaurin series (\prefp{thm:taylor})}
+    && \text{by Maclaurin series \xref{thm:taylor}}
   \\&= \sum_{k=0}^\infty \frac{1}{k!} \Big[n(n-1)(n-2)\cdots(n-k+1)(x+y)^{n-k}\Big]_{y=0} y^k
   \\&= \sum_{k=0}^\infty \frac{1}{k!} \frac{n!}{(n-k)!} x^{n-k} y^k
-  \\&= \sum_{k=0}^\infty {n\choose k} x^{n-k} y^k
-    \qquad\text{by definition of ${n\choose k}$}
-  \\&= \sum_{k=0}^n {n\choose k} x^{n-k} y^k
-      +\cancelto{0}{\sum_{k=n+1}^\infty {n\choose k} x^{n-k} y^k}
-  \\&= \sum_{k=0}^n {n\choose k} x^{n-k} y^k
-    \qquad\text{because $(x+y)^n$ has order $n$}
+  \\&= \sum_{k=0}^\infty \bcoef{n}{k} x^{n-k} y^k
+    && \text{by definition of $\bcoef{n}{k}$ \ifxref{binomial}{def:bcoef}}
+  \\&= \sum_{k=0}^n \bcoef{n}{k} x^{n-k} y^k
+      +\cancelto{0}{\sum_{k=n+1}^\infty \bcoef{n}{k} x^{n-k} y^k}
+  \\&= \sum_{k=0}^n \bcoef{n}{k} x^{n-k} y^k
+    && \text{because $(x+y)^n$ has order $n$}
 \end{align*}
 
 \item Proof using induction:
 \begin{enumerate}
 \item Proof that
-  $(x+y)^{n} = \sum_{k=0}^{n} {n \choose k} x^k y^{n-k}$
+  $(x+y)^{n} = \sum_{k=0}^{n} \bcoef{n}{k} x^k y^{n-k}$
   is true for $n=0$:
 \begin{align*}
-  \left.\sum_{k=0}^{n} {n \choose k} x^k y^{n-k} \right|_{n=0}
+  \left.\sum_{k=0}^{n} \bcoef{n}{k} x^k y^{n-k} \right|_{n=0}
     &= {0 \choose 0} x^0 y^{0-0}
   \\&= 1
   \\&= (x+y)^n|_{n=0}
 \end{align*}
 
 \item Proof that
-  $(x+y)^{n} = \sum_{k=0}^{n} {n \choose k} x^k y^{n-k}$
+  $(x+y)^{n} = \sum_{k=0}^{n} \bcoef{n}{k} x^k y^{n-k}$
   is true for $n=1$:
 \begin{align*}
-  \left.\sum_{k=0}^{n} {n \choose k} x^k y^{n-k} \right|_{n=1}
+  \left.\sum_{k=0}^{n} \bcoef{n}{k} x^k y^{n-k} \right|_{n=1}
     &= {1 \choose 0} x^0 y^{1-0} + {1 \choose 1} x^1 y^{1-1}
   \\&= y + x
   \\&= (x+y)^n|_{n=1}
 \end{align*}
 
 \item Proof that
-  $(x+y)^{n} = \sum_{k=0}^{n} {n \choose k} x^k y^{n-k}
+  $(x+y)^{n} = \sum_{k=0}^{n} \bcoef{n}{k} x^k y^{n-k}
    \implies
-   (x+y)^{n+1} = \sum_{k=0}^{n+1} {n \choose k} x^k y^{n+1-k}:
+   (x+y)^{n+1} = \sum_{k=0}^{n+1} \bcoef{n}{k} x^k y^{n+1-k}:
   $
 \begin{align*}
   &\sum_{k=0}^{n+1} {n+1 \choose k} x^k y^{n+1-k}
   \\&= x^{n+1} + y^{n+1} + \sum_{k=1}^{n} {n+1 \choose k} x^k y^{n+1-k}
   \\&= x^{n+1} + y^{n+1}
-     + \sum_{k=1}^{n} \left[ {n \choose k-1}+ {n \choose k} \right] x^k y^{n+1-k}
+     + \sum_{k=1}^{n} \left[ \bcoef{n}{k-1}+ \bcoef{n}{k} \right] x^k y^{n+1-k}
     \qquad\text{by \thme{Pascal's Rule} \ifxref{binomial}{thm:Pascals_Rule}}
   \\&= x^{n+1} + y^{n+1}
-     + \sum_{k=1}^{n} {n \choose k-1} x^k y^{n+1-k}
-     + \sum_{k=1}^{n} {n \choose k  } x^k y^{n+1-k}
+     + \sum_{k=1}^{n} \bcoef{n}{k-1} x^k y^{n+1-k}
+     + \sum_{k=1}^{n} \bcoef{n}{k} x^k y^{n+1-k}
   \\&= x^{n+1} + y^{n+1}
-     + \left[ \sum_{k=0}^{n} {n \choose k  } x^{k+1} y^{n+1-(k+1)} -x^{n+1}\right]
-     + \left[ \sum_{k=0}^{n} {n \choose k  } x^k y^{n+1-k} - y^{n+1} \right]
-  \\&= x \sum_{k=0}^{n} {n \choose k } x^k y^{n-k}
-     + y \sum_{k=0}^{n} {n \choose k } x^k y^{n-k}
+     + \left[ \sum_{k=0}^{n} \bcoef{n}{k} x^{k+1} y^{n+1-(k+1)} -x^{n+1}\right]
+     + \left[ \sum_{k=0}^{n} \bcoef{n}{k} x^k y^{n+1-k} - y^{n+1} \right]
+  \\&= x \sum_{k=0}^{n} \bcoef{n}{k} x^k y^{n-k}
+     + y \sum_{k=0}^{n} \bcoef{n}{k} x^k y^{n-k}
   \\&= x (x+y)^n + y(x+y)^n
     \qquad\text{by left hypothesis}
   \\&= (x+y)(x+y)^n
