--- a/common/wavelets/vanish.tex
+++ b/common/wavelets/vanish.tex
@@ -1287,21 +1287,30 @@ for a \hie{B-spline}.
   \end{array}$
 %  &\includegraphics{../common/math/graphics/pdfs/bspline_phi_h.pdf}&\includegraphics{../common/math/graphics/pdfs/bspline_psi_g.pdf}
 \end{array}}
-\\
-\begin{tabular}{cc}
-   \includegraphics{../common/math/graphics/pdfs/n3_h.pdf}
-  &\includegraphics{../common/math/graphics/pdfs/n3_pz.pdf}
-\end{tabular}
+\\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n3_h.pdf}}
+  \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n3_pz.pdf}}
 \end{example}
 \begin{proof}
-These results follow from \prefp{thm:Bsplineh}.
-\\\indentx$\brp{\begin{array}{*{9}{c}}
-    &   &   &   & 1 &   &   &   &  \\
-    &   &   & 1 &   & 1 &   &   &  \\
-    &   & 1 &   & 2 &   & 1 &   &  \\
-    & 1 &   & 3 &   & 3 &   & 1 &  \\
-  1 &   & 4 &   & 6 &   & 4 &   & 1
-\end{array}}$
+\begin{enumerate}
+  \item These results follow from \prefp{thm:Bsplineh}.
+        \\\indentx$\brp{\begin{array}{c|*{9}{c}}
+            n=0: &   &   &   &   & 1 &   &   &   &
+          \\n=1: &   &   &   & 1 &   & 1 &   &   &
+          \\n=2: &   &   & 1 &   & 2 &   & 1 &   &
+          \\n=3: &   & 1 &   & 3 &   & 3 &   & 1 &
+          \\n=4: & 1 &   & 4 &   & 6 &   & 4 &   & 1
+        \end{array}}$
+  \item Alternative \ldots
+  \begin{align*}
+    \Zh(z)
+      &= \sqrt{2}\brs{\frac{(z+1)^4} {(1+1)^4 z^4}}
+    \\&= \frac{\sqrt{2}}{2^4}\brs{\frac{\sum_{n=0}^4 \bcoef{4}{n}z^n} {z^4}}
+      && \text{by \thme{Binomial Theorem} \ifxref{polynom}{thm:binomial}}
+    \\&= \frac{\sqrt{2}}{16} \brs{\frac{z^4 + 4z^3 + 6z^2 + 4z^ + 1}{z^4} }
+      && \text{by definition of $\bcoef{n}{k}$ \ifxref{binomial}{def:bcoef}}
+    \\&= \frac{\sqrt{2}}{16} \brs{ 1 + 4z^{-1} + 6z^{-2} + 4z^{-3} + 1z^{-4}}
+  \end{align*}
+\end{enumerate}
 \end{proof}
 
 
