--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -899,4 +899,45 @@ Note two details:
 \end{align*}
 \end{proof}
 
+%--------------------------------------
+\begin{example}
+\label{ex:h_1_2_2_1}
+%--------------------------------------
+Let $\wavsys$ be a \structe{wavelet system}.
+\exbox{
+  \brb{\begin{array}{FMMD}
+      1. & $\support\fphi(x)=\intcc{0}{2}$                                & \xref{thm:mra_support} & and
+    \\2. & \prope{admissibility condition}                                & \xref{thm:admiss}      & and
+    \\3. & \prope{partition of unity}                                     & \xref{thm:pun_zero}    & and
+    \\4. & $\Zh(z)$ has 2 roots at $z=-\frac{1}{2}\pm i\frac{\sqrt{3}}{2}$ &                        &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{|r|r|}%
+    n  & \fh_{n}
+    \\\hline
+      0 & \frac{\sqrt{2}}{6} \cdot 1
+    \\1 & \frac{\sqrt{2}}{6} \cdot 2
+    \\2 & \frac{\sqrt{2}}{6} \cdot 2
+    \\3 & \frac{\sqrt{2}}{6} \cdot 1
+    \\\text{other} & 0
+  \end{array}}
+  }
+  \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_2_2_1_pz.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_2_2_1_phi_h.pdf}}
+    \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_2_2_1_psi_g.pdf}}
+  \\
+\end{example}
+\begin{proof}
+\begin{align*}
+  \Zh(z)
+    &= \sqrt{2}\brs{\frac{ \brp{z+1} \brp{z+\frac{1}{2}-i\frac{\sqrt{3}}{2}} \brp{z+\frac{1}{2}+i\frac{\sqrt{3}}{2}} }
+                         { \brp{1+1} \brp{1+\frac{1}{2}-i\frac{\sqrt{3}}{2}} \brp{1+\frac{1}{2}+i\frac{\sqrt{3}}{2}} } z^4}
+  \\&= \sqrt{2}\brs{\frac{ \brp{z+1} \brp{z^2 + \brp{\frac{1}{2}+\frac{1}{2}+0}z + \frac{1}{4}\abs{1+i\sqrt{3}}^2} }
+                         { \brp{2}   \brp{1   + \brp{\frac{1}{2}+\frac{1}{2}  }  + \frac{1}{4}\abs{1+i\sqrt{3}}^2} } z^4}
+  \\&= \sqrt{2}\brs{\frac{ \brp{z+1} \brp{z^2 +        z + \frac{2^2}{4}} }
+                         { \brp{2}   \brp{1   + \brp{1}  + \frac{2^2}{4}} } z^4}
+  \\&= \frac{\sqrt{2}}{6}\brs{ z^3 + 2z^2 + 2z + 1 }
+\end{align*}
+\end{proof}
+
 
